assert-struct/tests/snapshots/field_operations__deref_field_mismatch.snap
---
source: assert-struct/tests/field_operations.rs
expression: message
---
assert_struct! failed:
expected 42 to match 99
