assert-struct/tests/snapshots/field_operations__deref_with_comparison.snap
---
source: assert-struct/tests/field_operations.rs
expression: message
---
assert_struct! failed:

   | TestStruct {
mismatch:
  --> `test.*arc_value` (line 18)
   |     *arc_value: > 60,
   |                 ^^^^ actual: 50
   | }
