assert-struct/tests/snapshots/field_operations__enum_with_deref_mismatch.snap
---
source: assert-struct/tests/field_operations.rs
expression: message
---
assert_struct! failed:

   | TestStruct {
mismatch:
  --> `test.boxed_option` (line 15)
   |     boxed_option: Some("goodbye"),
   |                        ^^^^^^^^^ actual: "hello"
   | }
