assert-struct/tests/snapshots/field_operations__mixed_operations_mismatch.snap
---
source: assert-struct/tests/field_operations.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/field_operations_errors/mixed_operations_mismatch.rs:18:34
   |
18 |         tuple_mix: ("hello", *1: 200, 30),  // Both 1: and 2: will fail
   |                                  ^^^  ^^ got 25
   |                                  |
   |                                  got 100
