assert-struct/tests/snapshots/field_operations__multiple_deref_mismatch.snap
---
source: assert-struct/tests/field_operations.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/field_operations_errors/multiple_deref_mismatch.rs:18:23
   |
18 |         **double_box: 99,      // Should be 42, will fail
   |                       ^^ got 42
