assert-struct/tests/snapshots/field_operations__nested_deref_mismatch.snap
---
source: assert-struct/tests/field_operations.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/field_operations_errors/nested_deref_mismatch.rs:26:24
   |
26 |             *rc_value: "goodbye",  // Should be "hello", will fail
   |                        ^^^^^^^^^ got "hello"
