assert-struct/tests/snapshots/field_operations__slice_with_deref_mismatch.snap
---
source: assert-struct/tests/field_operations.rs
expression: message
---
assert_struct! failed:

   | TestStruct {
mismatch:
  --> `test.*boxed_vec.[2]` (line 16)
   |     [2]: 4,
   |          ^ actual: 3
   | }
